centered "A" inside button itself (height)

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,9 @@
   </head>
   <body>
     <div id="root">
-      <button>A</button>
+      <button>
+        <span>A</span>
+      </button>
     </div>
   </body>
 </html>
